--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.password=${KinoXpPw}
 
 
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://52.178.179.160:3306/kinoxpdb?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
